--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "express-session-mongo",
+    "name": "connect-session-mongo",
     "version": "0.0.1",
-    "description": "MongoDB Session Store for ExpressJS",
-    "author": "Dav Glass <davglass@gmail.com>",
-    "bugs": { "web" : "http://github.com/davglass/express-session-mongo/issues" },
+    "description": "MongoDB Session Store for Connect Middleware",
+    "author": "Bart Teeuwisse <bart@zazengo.com>",
+    "contributors": ["Dav Glass <davglass@gmail.com>"],
+    "bugs": { "web" : "http://github.com/zazengo/connect-session-mongo/issues" },
     "os": ["darwin", "linux"],
     "engines": {
         "node" : ">=0.2.0"
@@ -11,20 +12,19 @@
     "directories": {
         "lib" : "lib"
     },
-    "main": "./lib/express-session-mongo",
+    "main": "./lib/connect-session-mongo",
     "dependencies": {
-        "express": ">=1.0.0rc4",
         "connect": ">=0.2.4",
         "mongodb": ">=0.7.9"
     },
     "licenses":[
         {
             "type" : "BSD",
-            "url" : "http://github.com/davglass/express-session-mongo/blob/master/LICENSE"
+            "url" : "http://github.com/zazengo/connect-session-mongo/blob/master/LICENSE"
         }
     ],
     "repository": {
         "type":"git",
-        "url":"http://github.com/davglass/express-session-mongo.git"
+        "url":"http://github.com/zazengo/connect-session-mongo.git"
     }
 }
