--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     },
     "main": "./lib/express-session-mongo",
     "dependencies": {
-        "express": ">=1.0.0rc4",
+        "express-session": "~1.2.1",
         "mongodb": ">=0.7.9"
     },
     "licenses": [
